--- a/css/style.css
+++ b/css/style.css
@@ -29,8 +29,13 @@ pre {
   padding: 1em;
   overflow-x: auto;
 }
-code { background: #f9f9f9; }
-pre code { background: none; }
+code { 
+  background: #f8f5ec; 
+  color: #c7254e;
+}
+pre code { 
+  background: none;
+}
 
 /* misc elements */
 img, iframe, video { max-width: 100%; }
