add toc 370f2daadf81d4a9789ace2717029142d01fd5d2

--- a/css/style.css
+++ b/css/style.css
@@ -29,6 +29,11 @@ hr {
   color: #ddd;
 }
 
+#TableOfContents, #TOC {
+  border: 1px solid #eee;
+  border-radius: 5px;
+}
+
 /* code */
 pre {
   border: 1px solid #ddd;
